# oneneuron_pypi

./: README.md  pyproject.toml
src/oneNeuron/: perceptron.py
