[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oneNeuron_pypi Sumit Kumar"
version = "0.0.1"
authors = [
  { name="Sumit Kumar", email="skvd07@gmail.com" },
]
description = "implementation of Perceptron"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/SumitVashist/oneneuron_pypi"
"Bug Tracker" = "https://github.com/SumitVashist/oneneuron_pypi/issues"